src/test/compile-fail/feature-gate-no_prelude.rs
#![no_prelude] //~ ERROR: experimental feature
               //~^ HELP: feature(no_prelude)
